--- a/resource/www/css/html5_reset.css
+++ b/resource/www/css/html5_reset.css
@@ -1,5 +1,5 @@
 html, body, div, span, h1, h2, h3, h4, h5, h6, address, img, strong, sub, sup, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, article, aside, header, footer, nav, section, p {
-	margin:0;padding:0;border:0;font-family:'Pretendard','Montserrat',sans-serif; 
+	margin:0;padding:0;border:0;font-family:'Pretendard','Outfit',sans-serif; 
 }/* q:따움표 */
 span, h1, h2, h3, h4, h5, h6, address, strong, em, a, button, b, i, label, p {
 	transform:rotate(-0.03deg);
