--- a/resource/www/css/layout.css
+++ b/resource/www/css/layout.css
@@ -3,4 +3,20 @@
 
 body { overflow-x: hidden; }
 #wrap { overflow-x: hidden; }
+.inner-padding { max-width: 100%; padding: 0 34px; }
 
+.header { position: fixed; top: 0; left: 0; z-index: 1; width: 100%; padding: 15px 0; }
+.header__inner-padding { display: flex; justify-content: space-between; align-items: center; }
+
+.header__logo {  }
+.header__logo a { display: block; }
+
+.header__gnb {  }
+.header__gnb ul { display: flex; align-items: center; gap: 10px; padding: 8px; border-radius: 50px; background-color: #7D7D7D20; }
+.header__gnb ul li.on a { color: #000; background-color: #fff; }
+.header__gnb ul li a { display: block; height: 36px; line-height: 36px; padding: 0 15px; font-family: var(--head-font); font-size: 18px; color: var(--white60); letter-spacing: 0.1px; border-radius: 50px; }
+
+.header__util { display: flex; align-items: center; gap: 5px; }
+.header__util .header__btn { display: block; height: 36px; line-height: 36px; padding: 0 15px; font-family: var(--head-font); font-weight: 500; font-size: 16px; border-radius: 50px; }
+.header__util .header__lang-btn { display: flex; align-items: center; gap: 3px; line-height: 34px; color: #fff; border: 2px solid #fff; }
+.header__util .header__contact-btn { color: #000; background-color: #fff; }
