--- a/resource/www/css/component.css
+++ b/resource/www/css/component.css
@@ -37,6 +37,7 @@
 	--gray-cc: #cccccc;
 	--gray-dd: #dddddd;
 	--gray-e5: #e5e5e5;
+	--gray-f2: #f2f2f2;
 	--gray-f5: #f5f5f5;
 	--gray-f6: #f6f6f6;
 	--gray-f7: #f7f7f7;
